changes on maven structure: site, pom, readme and index

--- a/src/site/xhtml/index.xhtml
+++ b/src/site/xhtml/index.xhtml
@@ -14,7 +14,7 @@
     </h1>
     <p>
       This test suite is based on the OGC WMTS 1.0 Abstract Test Suite (<a
-      href="WMTS 1.0 ATS.html">ATS</a>) and the following specifications:
+      href="ats.html">ATS</a>) and the following specifications:
     </p>
     <ul>
       <li id="OGC-06-121r3">
