--- a/src/site/xhtml/relnotes.xhtml
+++ b/src/site/xhtml/relnotes.xhtml
@@ -7,9 +7,13 @@
   <body>
     <h1>Release Notes</h1>
 
-    <h2>r4-SNAPSHOT (2014-MM-DD)</h2>
+    <h2>r4 (2014-10-DD)</h2>
     <p>This release includes the following changes:</p>
     <ul>
+      <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/6">issue 
+      #6</a>: Validating exception reports is very slow</li>
+      <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/5">issue 
+      #5</a>: GetFeatureInfo response entity is expected to be an XML resource</li>
       <li>Adopt Apache Maven as the build tool and modify directory layout accordingly.</li>
       <li>Add <code>capabilities.url</code> parameter to wmts:main test (display 
       main input form only if this is not set).</li>
