Update release notes.

--- a/src/site/xhtml/relnotes.xhtml
+++ b/src/site/xhtml/relnotes.xhtml
@@ -14,6 +14,8 @@
       #6</a>: Validating exception reports is very slow</li>
       <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/5">issue 
       #5</a>: GetFeatureInfo response entity is expected to be an XML resource</li>
+      <li>Integrated <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/pull/1">PR 
+      #1</a>: Modify test coverage such that that only capabilities from the ATS are tested.</li>
       <li>Adopt Apache Maven as the build tool and modify directory layout accordingly.</li>
       <li>Add <code>capabilities.url</code> parameter to wmts:main test (display 
       main input form only if this is not set).</li>
