Update pom.xml to build with Maven 2

--- a/src/site/xhtml/relnotes.xhtml
+++ b/src/site/xhtml/relnotes.xhtml
@@ -6,6 +6,29 @@
   </head>
   <body>
     <h1>Release Notes</h1>
+    
+    <h2>0.6 (2015-07-30)</h2>
+    <ul>
+    <li>Fix (PR) <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/23">[ 
+      23]</a>: rename duplicate function </li>
+      <li>Update pom.xml to build with Maven 2</li>
+    </ul>
+
+    <h2>0.5 (2015-03-25) </h2>
+    <ul>
+      <li>Starting this revision, the revision number will follow the conventions described in the <a target="_blank" href="https://github.com/opengeospatial/cite/wiki/OGC-Compliance-Testing-Tools">wiki</a></li>
+      <li><a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/16">[ 
+      16]</a>: Incorrect exceptionCode.</li>
+      <li><a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/15">[ 
+      15]</a>: Test wmts:Server.KVP.GET.GetFeatureInfo.Mandatory uses incorrect format in request.</li>
+      <li><a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/14">[ 
+      14]</a>: image/png8 tests failed in WMTS.</li>
+       <li><a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/10">[ 
+      10]</a>: text\html and text\plain not working in KVP valid infoformat test</li>
+       <li><a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/8">[ 
+      8]</a>: Misspelled exception code in Invalid InfoFormat test</li>
+
+    </ul>
 
     <h2>r4 (2014-11-03)</h2>
     <p>This is a major update that includes the following changes:</p>
