--- a/src/site/xhtml/relnotes.xhtml
+++ b/src/site/xhtml/relnotes.xhtml
@@ -6,7 +6,13 @@
   </head>
   <body>
     <h1>Release Notes</h1>
-    
+
+    <h2>0.7 (2016-MM-DD)</h2>
+    <ul>
+    <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/24">issue #24</a>: 
+    <code>Server.RESTful.HTTP.Mandatory</code> test does not work with self-declaring service</li>
+    </ul>
+
     <h2>0.6 (2015-07-30)</h2>
     <ul>
     <li>Fix (PR) <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/23">[ 
