Add check for supported image type (issue #13).

--- a/src/site/xhtml/relnotes.xhtml
+++ b/src/site/xhtml/relnotes.xhtml
@@ -11,6 +11,8 @@
     <ul>
     <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/24">issue #24</a>: 
     <code>Server.RESTful.HTTP.Mandatory</code> test does not work with self-declaring service</li>
+    <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/13">issue #13</a>: 
+    Unsupported image formats cause test failures (wmts:Server.KVP.GET.GetTile.Valid.Tile.Size)</li>
     </ul>
 
     <h2>0.6 (2015-07-30)</h2>
