Introduce subtest GetTileMatrixByImageFormat (in wmtsServerGetTileTests.xml) to fix #13

--- a/src/site/xhtml/relnotes.xhtml
+++ b/src/site/xhtml/relnotes.xhtml
@@ -9,6 +9,8 @@
 
     <h2>0.7 (2016-MM-DD)</h2>
     <ul>
+    <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/13">issue #13</a>: 
+    Additional image formats fail WMTS test (Server.KVP.GET.GetTile.Valid.Tile.Size)</li>
     <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/24">issue #24</a>: 
     <code>Server.RESTful.HTTP.Mandatory</code> test does not work with self-declaring service</li>
     <li>Fix <a target="_blank" href="https://github.com/opengeospatial/ets-wmts10/issues/13">issue #13</a>: 
